--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,15 @@
   padding: 20px 20px 20px 20px;
   background-color: #dcdcdc;
 }
+
+.block_3 {
+  font-size: 18px;
+  padding: 20px 20px 20px 20px;
+  background-color: #ffd700;
+}
+
+.block_4 {
+  font-size: 18px;
+  padding: 20px 20px 20px 20px;
+  background-color: #ff69b4;
+}
