добавил в разметку block_5 добавил в стили класс block_5

--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,9 @@
   padding: 20px 20px 20px 20px;
   background-color: #ff69b4;
 }
+
+.block_5 {
+  font-size: 18px;
+  padding: 20px 20px 20px 20px;
+  background-color: #c1cdc1;
+}
